fix: 🐛 logo alignment

--- a/style.css
+++ b/style.css
@@ -807,6 +807,16 @@ h4 {
     filter: brightness(60%);
 }
 
+#presentation-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#presentation-text img {
+    margin-bottom: 30px;
+}
+
 .bg-presentation {
     background-image: url("img/image-de-presentation.webp");
 }
